--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vim/bundle/yankring"]
 	path = vim/bundle/yankring
 	url = https://github.com/vim-scripts/YankRing.vim.git
+[submodule "vim/bundle/latex-box"]
+	path = vim/bundle/latex-box
+	url = https://github.com/vim-scripts/LaTeX-Box.git
