--- a/tmux.conf
+++ b/tmux.conf
@@ -7,42 +7,24 @@
 # Description:  tmux Configuration
 #==============================================================================
 
+# use 256 term for pretty colors, screen typically works better than xterm
+set -g default-terminal "screen-256color"
+# set -g default-terminal "xterm-256color"
+
 # *** setw is short for set-window-option ***
-
-# use 256 term for pretty colors
-# set -g default-terminal "screen-256color"
-set -g default-terminal "xterm-256color"
-
-# increase scroll-back history
-set -g history-limit 5000
-
-# use vim key bindings
-setw -g mode-keys vi
-
-# enable mouse
-setw -g mode-mouse on
-
-# Allow mouse to select which pane to use
-set -g mouse-select-pane on
-
-# decrease command delay (increases vim responsiveness)
-set -sg escape-time 1
-
-# increase repeat time for repeatable commands
-set -g repeat-time 1000
-
-# start window index at 1
-set -g base-index 1
-
-# start pane index at 1
-setw -g pane-base-index 1
+set -g history-limit 5000   # increase scroll-back history
+setw -g mode-keys vi        # use vim key bindings
+setw -g mode-mouse on       # enable mouse
+set -g mouse-select-pane on # Allow mouse to select which pane to use
+set -sg escape-time 1       # decrease command delay (increases vim responsiveness)
+set -g repeat-time 1000     # increase repeat time for repeatable commands
+set -g base-index 1         # start window index at 1
+setw -g pane-base-index 1   # start pane index at 1
+set -g renumber-windows on  # re-number windows when one is closed
 
 # highlight window when it has new activity
 setw -g monitor-activity on
 set -g visual-activity on
-
-# re-number windows when one is closed
-set -g renumber-windows on
 
 # enable pbcopy and pbpaste
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/blob/master/README.md
