--- a/tmux.conf
+++ b/tmux.conf
@@ -12,32 +12,33 @@ set -g default-terminal "screen-256color"
 # set -g default-terminal "xterm-256color"
 
 # *** setw is short for set-window-option ***
-set -g history-limit 5000   # increase scroll-back history
-setw -g mode-keys vi        # use vim key bindings
-setw -g mode-mouse on       # enable mouse
-set -g mouse-select-pane on # Allow mouse to select which pane to use
-set -sg escape-time 1       # decrease command delay (increases vim responsiveness)
-set -g repeat-time 1000     # increase repeat time for repeatable commands
-set -g base-index 1         # start window index at 1
-setw -g pane-base-index 1   # start pane index at 1
-set -g renumber-windows on  # re-number windows when one is closed
+set  -g history-limit 5000      # increase scroll-back history
+setw -g mode-keys vi            # use vim key bindings
+setw -g mode-mouse on           # enable mouse
+set  -g mouse-select-pane on    # Allow mouse to select which pane to use
+set  -sg escape-time 1          # decrease command delay (increases vim responsiveness)
+set  -g repeat-time 1000        # increase repeat time for repeatable commands
+set  -g base-index 1            # start window index at 1
+setw -g pane-base-index 1       # start pane index at 1
+set  -g renumber-windows on     # re-number windows when one is closed
 
 # highlight window when it has new activity
 setw -g monitor-activity on
-set -g visual-activity on
+set  -g visual-activity on
 
 # enable pbcopy and pbpaste
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/blob/master/README.md
-# change /bin/bash to zsh or other
-set-option -g default-command "reattach-to-user-namespace -l /bin/bash"
+# use homebrew newer bash version instead of /bin/bash
+set-option -g default-command "reattach-to-user-namespace -l /usr/local/bin/bash"
 
 #==============================================================================
 #  Key Bindings
 #==============================================================================
 
-# # tmux prefix
+# tmux prefix C-a (like screen)
 unbind C-b
 set -g prefix C-a
+bind C-a send-prefix
 
 # select with 'v' as in Vim
 bind -t vi-copy v begin-selection
