Add minor changes to bash files. Add utf-8 encoding and window change mappings to vimrc.

--- a/tmux.conf
+++ b/tmux.conf
@@ -41,7 +41,8 @@ set -g prefix C-a
 bind C-a send-prefix
 
 # select with 'v' as in Vim
-bind -t vi-copy v begin-selection
+bind -t vi-copy v begin-selection      # emulate visual 
+bind -t vi-copy 'C-v' rectangle-toggle # emulate visual block 
 bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # copy with 'enter' or 'y' and send to mac os clipboard: http://goo.gl/2Bfn8
