Update default bash to 4.3 and include shopt lines in .bashrc

--- a/tmux.conf
+++ b/tmux.conf
@@ -69,8 +69,8 @@ bind ^J select-pane -t :.+
 # bind j select-pane -D
 # bind k select-pane -U
 # bind l select-pane -R
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+# bind -r C-h select-window -t :-
+# bind -r C-l select-window -t :+
 
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
@@ -80,6 +80,8 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
+# Use prefix + C-l to redraw screen
+bind C-l send-keys 'C-l'
 
 # force a reload of the config file
 unbind r
