--- a/tmux.conf
+++ b/tmux.conf
@@ -26,6 +26,9 @@ set  -g renumber-windows on     # re-number windows when one is closed
 setw -g monitor-activity on
 set  -g visual-activity on
 
+set-option -g bell-action visual
+set-option -g visual-bell on
+
 # enable pbcopy and pbpaste
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/blob/master/README.md
 # use homebrew newer bash version instead of /bin/bash
