Remove mvim from all aliases for compatibility with Linux machines.
Former-commit-id: 682cfd989755b00c302319938c3dd84cf96f0a32 [formerly 02be4abfa0af3936a2f5c5ae1fa4d709b4b4b9f3]
Former-commit-id: e6e7db8fecc883dba10543e1a07922afae11c333

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,22 +12,24 @@ set -g default-terminal "screen-256color"
 # set -g default-terminal "xterm-256color"
 
 # *** setw is short for set-window-option ***
-set  -g history-limit 5000      # increase scroll-back history
-setw -g mode-keys vi            # use vim key bindings
-setw -g mode-mouse on           # enable mouse
-set  -g mouse-select-pane on    # Allow mouse to select which pane to use
-set  -sg escape-time 1          # decrease command delay (increases vim responsiveness)
-set  -g repeat-time 1000        # increase repeat time for repeatable commands
-set  -g base-index 1            # start window index at 1
-setw -g pane-base-index 1       # start pane index at 1
-set  -g renumber-windows on     # re-number windows when one is closed
+set  -g  history-limit 10000     # increase scroll-back history
+setw -g  mode-keys vi            # use vim key bindings
+setw -g  mode-mouse on           # enable mouse
+set  -g  mouse-select-pane on    # Allow mouse to select which pane to use
+set  -g  mouse-resize-pane on    # Allow mouse to resize pane
+set  -g  mouse-select-window on  # Allow mouse to select which window to use
+set  -sg escape-time 1           # decrease command delay (increases vim speed)
+set  -g  repeat-time 1000        # increase repeat time for repeatable commands
+set  -g  base-index 1            # start window index at 1
+setw -g  pane-base-index 1       # start pane index at 1
+set  -g  renumber-windows on     # re-number windows when one is closed
 
 # highlight window when it has new activity
 setw -g monitor-activity on
 set  -g visual-activity on
 
-set-option -g bell-action visual
-set-option -g visual-bell on
+set-option -g bell-action any
+set-option -g visual-bell off
 
 # enable pbcopy and pbpaste
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/blob/master/README.md
@@ -108,7 +110,7 @@ set -g status-left-length 40
 set -g status-left '#[fg=green]#S#[fg=blue] #[default]'
 
 # show hostname in right status bar
-set-option -g status-right '#[fg=green]#H#[default]' 
+set-option -g status-right '#[fg=green]#H#[default]'
 
 # add this string to status-right to show date,time,battery
 # '%m/%d/%y %I:%M\ #[fg=red]#(battery discharging)#[default]#(battery charging)'
