--- a/tmux.conf
+++ b/tmux.conf
@@ -15,10 +15,10 @@ set -g default-terminal "screen-256color"
 set  -g  history-limit 10000     # increase scroll-back history
 setw -g  mode-keys vi            # use vim key bindings
 setw -g  mode-mouse on           # enable mouse
-set  -g  mouse-select-pane on    # Allow mouse to select which pane to use
 set  -g  mouse-resize-pane on    # Allow mouse to resize pane
+set  -g  mouse-select-pane on    # Allow mouse to select which pane to use
 set  -g  mouse-select-window on  # Allow mouse to select which window to use
-set  -sg escape-time 1           # decrease command delay (increases vim speed)
+set  -gs escape-time 1           # decrease command delay (increases vim speed)
 set  -g  repeat-time 1000        # increase repeat time for repeatable commands
 set  -g  base-index 1            # start window index at 1
 setw -g  pane-base-index 1       # start pane index at 1
@@ -26,8 +26,9 @@ set  -g  renumber-windows on     # re-number windows when one is closed
 
 # highlight window when it has new activity
 setw -g monitor-activity on
-set  -g visual-activity on
+set  -g visual-activity  on
 
+# No visual bell (it's annoying and slows things down)
 set-option -g bell-action any
 set-option -g visual-bell off
 
@@ -46,8 +47,8 @@ set -g prefix C-a
 bind C-a send-prefix
 
 # select with 'v' as in Vim
-bind -t vi-copy v begin-selection      # emulate visual 
-bind -t vi-copy 'C-v' rectangle-toggle # emulate visual block 
+bind -t vi-copy v begin-selection           # emulate visual 
+bind -t vi-copy 'C-v' rectangle-toggle      # emulate visual block 
 bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # copy with 'enter' or 'y' and send to mac os clipboard: http://goo.gl/2Bfn8
@@ -61,9 +62,9 @@ bind C-p paste-buffer
 
 # window splitting
 unbind %
-bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 # quickly switch panes
 unbind ^J
@@ -78,12 +79,12 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # Smart pane switching with awareness of vim splits
-# is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-# bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-# bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-# bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-# bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-# bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Use prefix + C-l to redraw screen
 bind C-l send-keys 'C-l'
@@ -96,31 +97,34 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # Status Bar
 #==============================================================================
 # enable UTF-8 support in status bar
-set -g status-utf8 on
+set  -g status-utf8 on
 
 # set refresh interval for status bar
 set -g status-interval 30
 
 # center the status bar
+set -g status-position bottom
 set -g status-justify left
 
 # show session, window, pane in left status bar
 set -g status-left-length 40
-# set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
-set -g status-left '#[fg=green]#S#[fg=blue] #[default]'
+set -g status-left '#[fg=green]#S#[fg=default] #I:#P #[default]'
 
-# show hostname in right status bar
-set-option -g status-right '#[fg=green]#H#[default]'
-
-# add this string to status-right to show date,time,battery
-# '%m/%d/%y %I:%M\ #[fg=red]#(battery discharging)#[default]#(battery charging)'
+# show hostname, date, time and battery, in right status bar
+set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R'
+# set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R | #(/usr/local/bin/power.sh)'
+# set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R #[fg=red]#(battery discharging)#[fg=default]#(battery charging)'
 
 #==============================================================================
 # Colors
 #==============================================================================
 # color status bar
-set -g status-bg colour235
+set -g status-bg colour235  # dark grey
 set -g status-fg white
+
+# color message line
+set -g message-fg colour235
+set -g message-bg yellow
 
 # highlight current window
 set-window-option -g window-status-current-fg black
