Add printer options to bashrc. Add mouse support for tmux and vim. Ignore whitespace in vimdiff, and set wrap.
Former-commit-id: 26ba632bc3262a651e53f94a7f168aefd11f4206 [formerly 096336c8aebb82bfbb796173045dcbbd622cd452]
Former-commit-id: 20794e3347121bc569310d04144d678914e10e3c

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,7 +34,6 @@ set-option -g visual-bell off
 
 # enable pbcopy and pbpaste
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/blob/master/README.md
-# use homebrew newer bash version instead of /bin/bash
 set-option -g default-command "reattach-to-user-namespace -l /usr/local/bin/bash"
 
 #==============================================================================
@@ -42,7 +41,7 @@ set-option -g default-command "reattach-to-user-namespace -l /usr/local/bin/bash
 #==============================================================================
 
 # tmux prefix C-a (like screen)
-unbind C-b
+# unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
@@ -61,9 +60,9 @@ unbind C-p
 bind C-p paste-buffer
 
 # window splitting
-unbind %
+# unbind %
 bind | split-window -h -c "#{pane_current_path}"
-unbind '"'
+# unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
 # quickly switch panes
@@ -111,8 +110,8 @@ set -g status-left-length 40
 set -g status-left '#[fg=green]#S#[fg=default] #I:#P #[default]'
 
 # show hostname, date, time and battery, in right status bar
-set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R'
-# set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R | #(/usr/local/bin/power.sh)'
+# set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R'
+set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R | #(/usr/local/bin/power.sh)'
 # set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R #[fg=red]#(battery discharging)#[fg=default]#(battery charging)'
 
 #==============================================================================
