--- a/tmux.conf
+++ b/tmux.conf
@@ -41,7 +41,7 @@ set-option -g default-command "reattach-to-user-namespace -l /usr/local/bin/bash
 #==============================================================================
 
 # tmux prefix C-a (like screen)
-# unbind C-b
+unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
@@ -59,11 +59,10 @@ bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind C-p
 bind C-p paste-buffer
 
-# window splitting
-# unbind %
+# window splitting, keep current directory
 bind | split-window -h -c "#{pane_current_path}"
-# unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # quickly switch panes
 unbind ^J
