--- a/tmux.conf
+++ b/tmux.conf
@@ -14,15 +14,17 @@ set -g default-terminal "screen-256color"
 # *** setw is short for set-window-option ***
 set  -g  history-limit 10000     # increase scroll-back history
 setw -g  mode-keys vi            # use vim key bindings
-setw -g  mode-mouse on           # enable mouse
-set  -g  mouse-resize-pane on    # Allow mouse to resize pane
-set  -g  mouse-select-pane on    # Allow mouse to select which pane to use
-set  -g  mouse-select-window on  # Allow mouse to select which window to use
+set  -g  mouse on                # enable mouse in v2.1
 set  -gs escape-time 1           # decrease command delay (increases vim speed)
 set  -g  repeat-time 1000        # increase repeat time for repeatable commands
 set  -g  base-index 1            # start window index at 1
 setw -g  pane-base-index 1       # start pane index at 1
 set  -g  renumber-windows on     # re-number windows when one is closed
+# # These options were for v2.0 and prior, replaced by "mouse":
+# setw -g  mode-mouse on           # enable mouse
+# set  -g  mouse-resize-pane on    # Allow mouse to resize pane
+# set  -g  mouse-select-pane on    # Allow mouse to select which pane to use
+# set  -g  mouse-select-window on  # Allow mouse to select which window to use
 
 # highlight window when it has new activity
 setw -g monitor-activity on
@@ -44,6 +46,9 @@ set-option -g default-command "reattach-to-user-namespace -l /usr/local/bin/bash
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
+
+# start copy mode when scrolling up (weird with vim mouse, so leave off)
+# bind -n  WheelUpPane copy-mode
 
 # select with 'v' as in Vim
 bind -t vi-copy v begin-selection           # emulate visual 
