--- a/tmux.conf
+++ b/tmux.conf
@@ -69,19 +69,17 @@ bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-# quickly switch panes
-unbind ^J
-bind ^J select-pane -t :.+
-
 # Make pane-switching act like vim
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+# bind -r C-h select-window -t :-
+# bind -r C-l select-window -t :+
 
-# Smart pane switching with awareness of vim splits
+# Smart pane switching with awareness of vim splits -- add "ssh" to list for
+#+ using <C-[hjkl]> within vim in an ssh session... doesn't allow for switching
+#+ to parent tmux session though (need <prefix>-[hjkl])
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
