--- a/tmux.conf
+++ b/tmux.conf
@@ -80,7 +80,7 @@ bind l select-pane -R
 # Smart pane switching with awareness of vim splits -- add "ssh" to list for
 #+ using <C-[hjkl]> within vim in an ssh session... doesn't allow for switching
 #+ to parent tmux session though (need <prefix>-[hjkl])
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?|ssh)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
