Re-add submodules after accidental deletion.
Former-commit-id: 371875dadc42e21a8b3b64351e62cb1d848b9f36 [formerly 9495f8bea4f7b015ebb86dd642e294c4bd35e728] [formerly b7bf6e360d7bc30a34a57f142398d4a6600d8c40 [formerly 181043eea7e13c1662f19d839d8e856d937f4a77]]
Former-commit-id: c700d8be97a30412bd643fcfad6b0f5b77eaf5f4 [formerly f9084f7301146b1020f528172799fd44702ce980]
Former-commit-id: 7c9f9bbd02bf7c86d82c0d5b9ac807fedc1be6f0

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,18 @@
 [submodule "vim/bundle/fugitive"]
 	path = vim/bundle/fugitive
 	url = http://github.com/tpope/vim-fugitive.git
-[submodule "vim/bundle/rename"]
-	path = vim/bundle/rename
-	url = https://github.com/danro/rename.vim.git
-[submodule "vim/bundle/tComment"]
-	path = vim/bundle/tComment
-	url = https://github.com/vim-scripts/tComment.git
+[submodule "vim/bundle/commentary"]
+	path = vim/bundle/commentary
+	url = git://github.com/tpope/vim-commentary.git
 [submodule "vim/bundle/supertab"]
 	path = vim/bundle/supertab
 	url = https://github.com/ervandew/supertab.git
-[submodule "vim/bundle/yankring"]
-	path = vim/bundle/yankring
-	url = https://github.com/vim-scripts/YankRing.vim.git
-[submodule "vim/bundle/latex-box"]
-	path = vim/bundle/latex-box
-	url = https://github.com/vim-scripts/LaTeX-Box.git
+[submodule "vim/bundle/LaTeX-Box"]
+	path = vim/bundle/LaTeX-Box
+	url = git://github.com/LaTeX-Box-Team/LaTeX-Box.git
+[submodule "vim/bundle/rename"]
+	path = vim/bundle/rename
+	url = https://github.com/danro/rename.vim.git
 [submodule "vim/bundle/vim-colors-solarized"]
 	path = vim/bundle/vim-colors-solarized
-	url = https://github.com/altercation/vim-colors-solarized.git
+	url = git://github.com/altercation/vim-colors-solarized.git
