Minor updates to rc files. Add folding markers to vimrc

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,12 +14,17 @@ set -g default-terminal "screen-256color"
 # *** setw is short for set-window-option ***
 set  -g  history-limit 10000     # increase scroll-back history
 setw -g  mode-keys vi            # use vim key bindings
-set  -g  mouse on                # enable mouse in v2.1
+setw -g  mouse on                # enable mouse in v2.1
 set  -gs escape-time 1           # decrease command delay (increases vim speed)
 set  -g  repeat-time 1000        # increase repeat time for repeatable commands
 set  -g  base-index 1            # start window index at 1
 setw -g  pane-base-index 1       # start pane index at 1
 set  -g  renumber-windows on     # re-number windows when one is closed
+
+# Allow tmux to change title of terminal emulator (i.e. Terminal.app)
+set  -g set-titles on
+set  -g set-titles-string "#T"
+
 # # These options were for v2.0 and prior, replaced by "mouse":
 # setw -g  mode-mouse on           # enable mouse
 # set  -g  mouse-resize-pane on    # Allow mouse to resize pane
@@ -41,14 +46,13 @@ set-option -g default-command "reattach-to-user-namespace -l /usr/local/bin/bash
 #------------------------------------------------------------------------------
 #  Key Bindings
 #------------------------------------------------------------------------------
-
 # tmux prefix C-a (like screen)
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
 # start copy mode when scrolling up (weird with vim mouse, so leave off)
-# bind -n  WheelUpPane copy-mode
+# bind -n WheelUpPane copy-mode
 
 # select with 'v' as in Vim
 bind -t vi-copy v begin-selection           # emulate visual 
@@ -108,8 +112,10 @@ set -g status-position bottom
 set -g status-justify left
 
 # show session, window, pane in left status bar
+# $3:@3.%7
 set -g status-left-length 40
-set -g status-left '#[fg=green]#S#[fg=default] #I:#P #[default]'
+# set -g status-left '#[fg=green]#S#[fg=default] #I:#P #[default]'
+set -g status-left '#[fg=green]#S#[fg=default] #{session_id}:#{window_id}.#D #[default]'
 
 # show hostname, date, time and battery, in right status bar
 # set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R'
