Minor updates to rc files.

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,8 @@
 # Created: 02/16/15
 #  Author: Bernie Roesler
 #
+# Last Modified: 04/21/2016, 10:42 
+#
 # Description:  tmux Configuration
 #==============================================================================
 
@@ -15,7 +17,7 @@ set -g default-terminal "screen-256color"
 set  -g  history-limit 10000     # increase scroll-back history
 setw -g  mode-keys vi            # use vim key bindings
 setw -g  mouse on                # enable mouse in v2.1
-set  -gs escape-time 1           # decrease command delay (increases vim speed)
+set  -gs escape-time 0           # decrease command delay (increases vim speed)
 set  -g  repeat-time 1000        # increase repeat time for repeatable commands
 set  -g  base-index 1            # start window index at 1
 setw -g  pane-base-index 1       # start pane index at 1
@@ -101,7 +103,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 #------------------------------------------------------------------------------
 # Status Bar
 #------------------------------------------------------------------------------
-# enable UTF-8 support in status bar
+# enable UTF-8 support
+set  -g        utf8 on
 set  -g status-utf8 on
 
 # set refresh interval for status bar
@@ -144,5 +147,14 @@ set -g pane-active-border-fg green
 set -g pane-active-border-bg black
 
 
+#------------------------------------------------------------------------------
+#        Run tmux-resurrect
+#------------------------------------------------------------------------------
+# Restore any vim sessions open
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-save-bash-history 'on'
+
+run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
 #==============================================================================
 #==============================================================================
