--- a/tmux.conf
+++ b/tmux.conf
@@ -46,7 +46,7 @@ set-option -g visual-bell off
 set-option -g default-command "reattach-to-user-namespace -l /usr/local/bin/bash"
 
 #------------------------------------------------------------------------------
-#  Key Bindings
+#       Key Bindings
 #------------------------------------------------------------------------------
 # tmux prefix C-a (like screen)
 unbind C-b
@@ -101,7 +101,7 @@ unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 #------------------------------------------------------------------------------
-# Status Bar
+#       Status Bar
 #------------------------------------------------------------------------------
 # enable UTF-8 support
 set  -g        utf8 on
@@ -117,8 +117,8 @@ set -g status-justify left
 # show session, window, pane in left status bar
 # $3:@3.%7
 set -g status-left-length 40
-# set -g status-left '#[fg=green]#S#[fg=default] #I:#P #[default]'
-set -g status-left '#[fg=green]#S#[fg=default] #{session_id}:#{window_id}.#D #[default]'
+set -g status-left '#[fg=green]#S#[fg=default] #I:#P #[default]'
+# set -g status-left '#[fg=green]#S#[fg=default] #{session_id}:#{window_id}.#D #[default]'
 
 # show hostname, date, time and battery, in right status bar
 # set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R'
@@ -126,7 +126,7 @@ set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R | #(/usr/local/b
 # set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R #[fg=red]#(battery discharging)#[fg=default]#(battery charging)'
 
 #------------------------------------------------------------------------------
-# Colors
+#       Colors
 #------------------------------------------------------------------------------
 # color status bar
 set -g status-bg colour235  # dark grey
@@ -146,9 +146,8 @@ set -g pane-border-bg black
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
 
-
 #------------------------------------------------------------------------------
-#        Run tmux-resurrect
+#       Run tmux-resurrect
 #------------------------------------------------------------------------------
 # Restore any vim sessions open
 set -g @resurrect-strategy-vim 'session'
