--- a/tmux.conf
+++ b/tmux.conf
@@ -147,13 +147,23 @@ set -g pane-active-border-fg green
 set -g pane-active-border-bg black
 
 #------------------------------------------------------------------------------
-#       Run tmux-resurrect
+#       Run plugins
 #------------------------------------------------------------------------------
-# Restore any vim sessions open
+# tmux plugin manager
+set -g @plugin '~/.tmux/plugins/tpm/'
+set -g @plugin '~/.tmux/plugins/tmux-colors-solarized/'
+
+# Solarized colorscheme
+set -g @colors-solarized '256'
+# set -g @colors-solarized 'dark'
+# set -g @colors-solarized 'light'
+
+# tmux resurrect
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-save-bash-history 'on'
 
 run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
+run '~/.tmux/plugins/tpm/tpm'
 #==============================================================================
 #==============================================================================
