Minor updates to tmux status-bar and git aliases.
Former-commit-id: d5e8a9f56290b43aa9488fa2c93a0b63cbcb39fe [formerly 7f0e46217170626d7cd54a7dd0ae1b7485c24fb7] [formerly ce134adec51e1de4059525e28cc0eb74c219caf1 [formerly 6db21ec6e236f4560da868d28171abb1d61a7a13]]
Former-commit-id: bdd21cef780862b8803b457bd2a119084a720dc7 [formerly 7bb56d322462617149be85a0b1865539c771a3ac]
Former-commit-id: c8e283a4e7aa5b75c2ff0be9a70e0c9466151ca5

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,7 +16,6 @@ set -g default-terminal "screen-256color"
 # *** setw is short for set-window-option ***
 set  -g  history-limit 10000     # increase scroll-back history
 setw -g  mode-keys vi            # use vim key bindings
-setw -g  mouse on                # enable mouse in v2.1
 set  -gs escape-time 0           # decrease command delay (increases vim speed)
 set  -g  repeat-time 1000        # increase repeat time for repeatable commands
 set  -g  base-index 1            # start window index at 1
@@ -27,7 +26,10 @@ set  -g  renumber-windows on     # re-number windows when one is closed
 set  -g set-titles on
 set  -g set-titles-string "#T"
 
-# # These options were for v2.0 and prior, replaced by "mouse":
+# Mouse in v2.1
+setw -g  mouse on                # enable mouse in v2.1
+
+# These options were for v2.0 and prior, replaced by "mouse":
 # setw -g  mode-mouse on           # enable mouse
 # set  -g  mouse-resize-pane on    # Allow mouse to resize pane
 # set  -g  mouse-select-pane on    # Allow mouse to select which pane to use
@@ -104,8 +106,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 #       Status Bar
 #------------------------------------------------------------------------------
 # enable UTF-8 support
-set  -g        utf8 on
-set  -g status-utf8 on
+# set  -g        utf8 on
+# set  -g status-utf8 on
 
 # set refresh interval for status bar
 set -g status-interval 30
@@ -117,8 +119,8 @@ set -g status-justify left
 # show session, window, pane in left status bar
 # $3:@3.%7
 set -g status-left-length 40
-set -g status-left '#[fg=green]#S#[fg=default] #I:#P #[default]'
-# set -g status-left '#[fg=green]#S#[fg=default] #{session_id}:#{window_id}.#D #[default]'
+# set -g status-left '#[fg=green]#S#[fg=default] #I:#P #[default]'
+set -g status-left '#[fg=green]#S#[fg=default] #{session_id}:#{window_id}.#D #[default]'
 
 # show hostname, date, time and battery, in right status bar
 # set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R'
