Update bash_profile and bashrc to handle coreutils.
Former-commit-id: 3ac601331940a6af96ed0f2207ca587b9bc20631 [formerly e3c336d5832ac4e4ddc7c479e57da8bf4f35504a] [formerly 14f427821fa3f9b48312bae928072fa0b2ab9e06 [formerly 65ab4ddce882403cf107af0e7ffc245432e1873f]]
Former-commit-id: 3353a8721057278599d327105495af8d67a4f145 [formerly 6f9ee9ee796d565e8affa2062ea7e4028b530271]
Former-commit-id: bfff83c69d2900bd4d7f76fdecc76c10fa148c34

--- a/tmux.conf
+++ b/tmux.conf
@@ -155,10 +155,8 @@ set -g pane-active-border-bg black
 set -g @plugin '~/.tmux/plugins/tpm/'
 set -g @plugin '~/.tmux/plugins/tmux-colors-solarized/'
 
-# Solarized colorscheme
-set -g @colors-solarized '256'
-# set -g @colors-solarized 'dark'
-# set -g @colors-solarized 'light'
+# Solarized colorscheme '256', 'dark', 'light'
+set -g @colors-solarized 'dark'
 
 # tmux resurrect
 set -g @resurrect-strategy-vim 'session'
