Install gnuplotvim as a submodule.
Former-commit-id: 454cca9419bacff71f8420cdbfcb7b99e1030b81 [formerly fb43713780d5ed0ea6581cdaf0de441dd23d191d] [formerly e03bdccd6fae532f05cda15ed1222662bc0a1345 [formerly 474bd1d2eaf5d99c21179fd060169886abccd61a]]
Former-commit-id: cc52f94b834ff366dbb848463cccaabd1c6d54ba [formerly 8760188f777255b2db4a442d3d3cf009bd62770e]
Former-commit-id: caed0d39cf0ce2d63b9f9ff0823217d5f8f12554

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vim/bundle/unimpaired"]
 	path = vim/bundle/unimpaired
 	url = git://github.com/tpope/vim-unimpaired.git
+[submodule "vim/bundle/gnuplotvim"]
+	path = vim/bundle/gnuplotvim
+	url = git@bitbucket.org:broesler/gnuplotvim.git
