Add ack.vim submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vim/bundle/gnuplotvim"]
 	path = vim/bundle/gnuplotvim
 	url = git@bitbucket.org:broesler/gnuplotvim.git
+[submodule "vim/bundle/ack.vim"]
+	path = vim/bundle/ack.vim
+	url = https://github.com/mileszs/ack.vim.git
