--- a/.gitmodules
+++ b/.gitmodules
@@ -20,7 +20,7 @@
 	path = vim/bundle/unimpaired
 	url = git://github.com/tpope/vim-unimpaired.git
 [submodule "vim/bundle/gnuplotvim"]
-	path = vim/bundle/gnuplotvim
+	path = vim/bundle/breptile
 	url = git@bitbucket.org:broesler/gnuplotvim.git
 [submodule "vim/bundle/ack.vim"]
 	path = vim/bundle/ack.vim
