--- a/tmux.conf
+++ b/tmux.conf
@@ -124,9 +124,7 @@ set -g status-left '#[fg=green]#S#[fg=default] #{session_id}:#{window_id}.#D #[d
 
 # show hostname, date, time and battery, in right status bar
 # set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R'
-set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R | #(/usr/local/bin/power.sh)'
-# set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R #[fg=red]#(battery discharging)#[fg=default]#(battery charging)'
-
+set-option -g status-right '%m/%d/%y %R | #[fg=green]#(/usr/local/bin/power.sh)'
 #------------------------------------------------------------------------------
 #       Colors
 #------------------------------------------------------------------------------
