Remove reattach-to-user-namespace from .tmux.conf
Former-commit-id: 0c7de6894faa6023413e22657a119d62459d8663 [formerly d01be260e4c110a01d254b6982738e21b8b1e97c] [formerly 10402fc1554253ca3fd35723a246e5ba55526f40 [formerly fbcf1b5864b34129a47f291c42399ba9398f015c]]
Former-commit-id: 686686982ba9087de02418775c71171ab73d221e [formerly 185ff61f84241ea7743a61da79a39bcdb36fac70]
Former-commit-id: 297956d28b54d9d8fba82d52c9ef29fb2901db11

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,12 +29,6 @@ set  -g set-titles-string "#T"
 # Mouse in v2.1
 setw -g  mouse on                # enable mouse in v2.1
 
-# These options were for v2.0 and prior, replaced by "mouse":
-# setw -g  mode-mouse on           # enable mouse
-# set  -g  mouse-resize-pane on    # Allow mouse to resize pane
-# set  -g  mouse-select-pane on    # Allow mouse to select which pane to use
-# set  -g  mouse-select-window on  # Allow mouse to select which window to use
-
 # highlight window when it has new activity
 setw -g monitor-activity on
 set  -g visual-activity  on
@@ -42,10 +36,6 @@ set  -g visual-activity  on
 # No visual bell (it's annoying and slows things down)
 set-option -g bell-action any
 set-option -g visual-bell off
-
-# enable pbcopy and pbpaste
-# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/blob/master/README.md
-set-option -g default-command "reattach-to-user-namespace -l /usr/local/bin/bash"
 
 #------------------------------------------------------------------------------
 #       Key Bindings
@@ -61,12 +51,14 @@ bind C-a send-prefix
 # select with 'v' as in Vim
 bind -t vi-copy v begin-selection           # emulate visual 
 bind -t vi-copy 'C-v' rectangle-toggle      # emulate visual block 
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # copy with 'enter' or 'y' and send to mac os clipboard: http://goo.gl/2Bfn8
 unbind -t vi-copy Enter
-bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind -t vi-copy Enter copy-pipe "pbcopy"
+bind -t vi-copy y copy-pipe "pbcopy"
+# NOTE: These lines don't copy to Mac clipboard:
+# bind -t vi-copy Enter copy-selection
+# bind -t vi-copy y copy-selection
 
 # paste
 unbind C-p
@@ -82,12 +74,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-# bind -r C-h select-window -t :-
-# bind -r C-l select-window -t :+
 
 # Smart pane switching with awareness of vim splits -- add "ssh" to list for
-#+ using <C-[hjkl]> within vim in an ssh session... doesn't allow for switching
-#+ to parent tmux session though (need <prefix>-[hjkl])
+# using <C-[hjkl]> within vim in an ssh session... doesn't allow for switching
+# to parent tmux session though (need <prefix>-[hjkl])
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?|ssh)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
@@ -125,6 +115,7 @@ set -g status-left '#[fg=green]#S#[fg=default] #{session_id}:#{window_id}.#D #[d
 # show hostname, date, time and battery, in right status bar
 # set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R'
 set-option -g status-right '%m/%d/%y %R | #[fg=green]#(/usr/local/bin/power.sh)'
+
 #------------------------------------------------------------------------------
 #       Colors
 #------------------------------------------------------------------------------
