Ensure /usr/local/bin/bash is used in tmux.
Former-commit-id: 48f23cce3c5cd59f87fec74e6f2ce6b172bf2bd6 [formerly 726c8784b5228f58a17d37b04b22f6e559e17dc7] [formerly dd852a21529a582957468e9af6e732cebde44606 [formerly c1d9da970e95eca6c02f217549bb58dd42fd4a6e]]
Former-commit-id: 931b60501e3be57b02936c8d210baf8ebbdfae1b [formerly 67e57ffecb2cf9a80b1c71639067f4ba0f500b05]
Former-commit-id: 130ecac567d33b7d852ef6c976f8e1422687b4d3

--- a/tmux.conf
+++ b/tmux.conf
@@ -37,6 +37,9 @@ set  -g visual-activity  on
 set-option -g bell-action any
 set-option -g visual-bell off
 
+# Ensure correct bash is used
+set-option -g default-command "/usr/local/bin/bash"
+
 #------------------------------------------------------------------------------
 #       Key Bindings
 #------------------------------------------------------------------------------
