Update submodule names.

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,9 +19,9 @@
 [submodule "vim/bundle/unimpaired"]
 	path = vim/bundle/unimpaired
 	url = git://github.com/tpope/vim-unimpaired.git
-[submodule "vim/bundle/gnuplotvim"]
+[submodule "vim/bundle/breptile"]
 	path = vim/bundle/breptile
-	url = git@bitbucket.org:broesler/gnuplotvim.git
+	url = git@bitbucket.org:broesler/breptile.git
 [submodule "vim/bundle/ack.vim"]
 	path = vim/bundle/ack.vim
 	url = https://github.com/mileszs/ack.vim.git
