[.tmux.conf] Put "reattach-to-user-namespace" commands back in for Sierra
Former-commit-id: 9ba21bf4b8b91a5a83823f08ab381ed05c96a20a [formerly 46fe702158c2171441423ac23cc43ea3a22568fb] [formerly 4448d1c695cc443e93ac2f31a0166f00532c35be [formerly e5dfa08bada18300486b8946ca908672156c6156]]
Former-commit-id: e075437cd61c5502e029b1cca994c0e3c236f178 [formerly 9a97c28e4b8e7baf6c41e0d1d94098b7db5c44b7]
Former-commit-id: 5c025a0a08f251270c43734a73c6d2203b69fc4f

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,11 +34,12 @@ setw -g monitor-activity on
 set  -g visual-activity  on
 
 # No visual bell (it's annoying and slows things down)
-set-option -g bell-action any
-set-option -g visual-bell off
+set -g bell-action any
+set -g visual-bell off
 
 # Ensure correct bash is used
-set-option -g default-command "/usr/local/bin/bash"
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 #------------------------------------------------------------------------------
 #       Key Bindings
@@ -57,8 +58,8 @@ bind -t vi-copy 'C-v' rectangle-toggle      # emulate visual block
 
 # copy with 'enter' or 'y' and send to mac os clipboard: http://goo.gl/2Bfn8
 unbind -t vi-copy Enter
-bind -t vi-copy Enter copy-pipe "pbcopy"
-bind -t vi-copy y copy-pipe "pbcopy"
+bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # NOTE: These lines don't copy to Mac clipboard:
 # bind -t vi-copy Enter copy-selection
 # bind -t vi-copy y copy-selection
