Add git aliases and tweak less colors.

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,7 @@ set -g default-terminal "screen-256color"
 # set -g default-terminal "xterm-256color"
 
 # *** setw is short for set-window-option ***
+set  -g  history-file ~/.tmux_history # save command history to file
 set  -g  history-limit 10000     # increase scroll-back history
 setw -g  mode-keys vi            # use vim key bindings
 set  -gs escape-time 0           # decrease command delay (increases vim speed)
