--- a/tmux.conf
+++ b/tmux.conf
@@ -150,7 +150,7 @@ set -g @plugin '~/.tmux/plugins/tpm/'
 set -g @plugin '~/.tmux/plugins/tmux-colors-solarized/'
 
 # Solarized colorscheme '256', 'dark', 'light'
-set -g @colors-solarized 'dark'
+set -g @colors-solarized '256'
 
 # tmux resurrect
 set -g @resurrect-strategy-vim 'session'
