--- a/tmux.conf
+++ b/tmux.conf
@@ -129,7 +129,7 @@ set -g status-bg colour235  # dark grey
 set -g status-fg white
 
 # color message line
-set -g message-fg colour235
+set -g message-fg colour235 # dark grey
 set -g message-bg yellow
 
 # highlight current window
@@ -137,7 +137,7 @@ set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg green
 
 # set color of active pane
-set -g pane-border-fg colour235
+set -g pane-border-fg colour235 # dark grey 
 set -g pane-border-bg black
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
@@ -150,10 +150,9 @@ set -g @plugin '~/.tmux/plugins/tpm/'
 set -g @plugin '~/.tmux/plugins/tmux-colors-solarized/'
 
 # Solarized colorscheme '256', 'dark', 'light'
-set -g @colors-solarized '256'
+set -g @colors-solarized 'dark'
 
 # tmux resurrect
-set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-save-bash-history 'on'
 
